--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-cryptography==2.9
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
+cryptography==3.4.8
 decorator==4.4.2
-gpapidl==1.0.2
-idna==2.9
+gpapi==1.0.0
+idna==2.10
 protobuf==3.14.0
-pycparser==2.20
-requests==2.23.0
+pycparser==2.21
+requests==2.28.2
 six==1.14.0
 termcolor==1.1.0
-urllib3==1.25.8
+urllib3==1.25.11
 validators==0.14.3
